--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,69 @@
 altair==5.5.0
 attrs==25.3.0
+bcrypt==4.3.0
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.4.26
+cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.1.8
+cmdstanpy==1.2.5
 colorama==0.4.6
+contourpy==1.3.2
+cycler==0.12.1
+fonttools==4.57.0
+gevent==25.4.2
 gitdb==4.0.12
 GitPython==3.1.44
+greenlet==3.2.1
+holidays==0.71
 idna==3.10
+importlib_resources==6.5.2
 Jinja2==3.1.6
+joblib==1.5.0
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
+kiwisolver==1.4.8
+logzero==1.7.0
 MarkupSafe==3.0.2
+matplotlib==3.10.1
 narwhals==1.37.1
 numpy==2.2.5
 packaging==24.2
 pandas==2.2.3
+patsy==1.0.1
 pillow==11.2.1
+plotly==6.0.1
+prophet==1.1.6
 protobuf==6.30.2
 pyarrow==20.0.0
+pycparser==2.22
 pydeck==0.9.1
 pyotp==2.9.0
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
 referencing==0.36.2
 requests==2.32.3
 rpds-py==0.24.0
 schedule==1.2.2
+scikit-learn==1.6.1
+scipy==1.15.2
 six==1.17.0
+smartapi-python==1.5.5
 smmap==5.0.2
+stanio==0.5.1
+statsmodels==0.14.4
 streamlit==1.45.0
 tenacity==9.1.2
+threadpoolctl==3.6.0
 toml==0.10.2
 tornado==6.4.2
+tqdm==4.67.1
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 watchdog==6.0.0
+websocket==0.2.1
+zope.event==5.0
+zope.interface==7.2
